tests/pre_push/snapshots/pre_push__projection__pr_body_generation_v2_state.snap
---
source: tests/pre_push/projection.rs
expression: ctx.formatted_mock_pr_state()
---
[
  {
    "id": 1,
    "number": 1,
    "html_url": "http://github.com/repos/owner/repo/pulls/1",
    "url": "http://api.github.com/repos/owner/repo/pulls/1",
    "node_id": "PR_1",
    "state": "OPEN",
    "user": {
      "login": "test-user",
      "id": 123,
      "node_id": "MDQ6VXNlcjE=",
      "avatar_url": "https://example.com/avatar",
      "gravatar_id": "",
      "url": "https://api.github.com/users/test-user",
      "html_url": "https://github.com/test-user",
      "followers_url": "https://api.github.com/users/test-user/followers",
      "following_url": "https://api.github.com/users/test-user/following{/other_user}",
      "gists_url": "https://api.github.com/users/test-user/gists{/gist_id}",
      "starred_url": "https://api.github.com/users/test-user/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/test-user/subscriptions",
      "organizations_url": "https://api.github.com/users/test-user/orgs",
      "repos_url": "https://api.github.com/users/test-user/repos",
      "events_url": "https://api.github.com/users/test-user/events{/privacy}",
      "received_events_url": "https://api.github.com/users/test-user/received_events",
      "type": "User",
      "site_admin": false
    },
    "title": "Commit A",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 　  #3\n- 　  #2\n- 👉 #1\n\n\n**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_1]/v1..gherrit/[GHERRIT_ID_1]/v2)\n\n<details>\n<summary><strong>📚 Full Patch History</strong></summary>\n\n*Links show the diff between the row version and the column version.*\n\n|Version| v1 |Base|\n|:---|:---|:---|\n|v2|[vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_1]/v1..gherrit/[GHERRIT_ID_1]/v2)|[vs Base](/owner/repo/compare/main..gherrit/[GHERRIT_ID_1]/v2)|\n|v1||[vs Base](/owner/repo/compare/main..gherrit/[GHERRIT_ID_1]/v1)|\n\n</details>\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout -b pr-[GHERRIT_ID_1] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_1] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_1]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_1]\",\"parent\":null,\"child\":\"[GHERRIT_ID_2]\"} -->",
    "head": {
      "ref": "[GHERRIT_ID_1]",
      "sha": ""
    },
    "base": {
      "ref": "main",
      "sha": ""
    },
    "created_at": "2023-01-01T00:00:00Z",
    "updated_at": "2023-01-01T00:00:00Z"
  },
  {
    "id": 2,
    "number": 2,
    "html_url": "http://github.com/repos/owner/repo/pulls/2",
    "url": "http://api.github.com/repos/owner/repo/pulls/2",
    "node_id": "PR_2",
    "state": "OPEN",
    "user": {
      "login": "test-user",
      "id": 123,
      "node_id": "MDQ6VXNlcjE=",
      "avatar_url": "https://example.com/avatar",
      "gravatar_id": "",
      "url": "https://api.github.com/users/test-user",
      "html_url": "https://github.com/test-user",
      "followers_url": "https://api.github.com/users/test-user/followers",
      "following_url": "https://api.github.com/users/test-user/following{/other_user}",
      "gists_url": "https://api.github.com/users/test-user/gists{/gist_id}",
      "starred_url": "https://api.github.com/users/test-user/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/test-user/subscriptions",
      "organizations_url": "https://api.github.com/users/test-user/orgs",
      "repos_url": "https://api.github.com/users/test-user/repos",
      "events_url": "https://api.github.com/users/test-user/events{/privacy}",
      "received_events_url": "https://api.github.com/users/test-user/received_events",
      "type": "User",
      "site_admin": false
    },
    "title": "Commit B",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 　  #3\n- 👉 #2\n- 　  #1\n\n\n**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_2]/v1..gherrit/[GHERRIT_ID_2]/v2)\n\n<details>\n<summary><strong>📚 Full Patch History</strong></summary>\n\n*Links show the diff between the row version and the column version.*\n\n|Version| v1 |Base|\n|:---|:---|:---|\n|v2|[vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_2]/v1..gherrit/[GHERRIT_ID_2]/v2)|[vs Base](/owner/repo/compare/[GHERRIT_ID_1]..gherrit/[GHERRIT_ID_2]/v2)|\n|v1||[vs Base](/owner/repo/compare/[GHERRIT_ID_1]..gherrit/[GHERRIT_ID_2]/v1)|\n\n</details>\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout -b pr-[GHERRIT_ID_2] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_2] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_2]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_2]\",\"parent\":\"[GHERRIT_ID_1]\",\"child\":\"[GHERRIT_ID_3]\"} -->",
    "head": {
      "ref": "[GHERRIT_ID_2]",
      "sha": ""
    },
    "base": {
      "ref": "[GHERRIT_ID_1]",
      "sha": ""
    },
    "created_at": "2023-01-01T00:00:00Z",
    "updated_at": "2023-01-01T00:00:00Z"
  },
  {
    "id": 3,
    "number": 3,
    "html_url": "http://github.com/repos/owner/repo/pulls/3",
    "url": "http://api.github.com/repos/owner/repo/pulls/3",
    "node_id": "PR_3",
    "state": "OPEN",
    "user": {
      "login": "test-user",
      "id": 123,
      "node_id": "MDQ6VXNlcjE=",
      "avatar_url": "https://example.com/avatar",
      "gravatar_id": "",
      "url": "https://api.github.com/users/test-user",
      "html_url": "https://github.com/test-user",
      "followers_url": "https://api.github.com/users/test-user/followers",
      "following_url": "https://api.github.com/users/test-user/following{/other_user}",
      "gists_url": "https://api.github.com/users/test-user/gists{/gist_id}",
      "starred_url": "https://api.github.com/users/test-user/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/test-user/subscriptions",
      "organizations_url": "https://api.github.com/users/test-user/orgs",
      "repos_url": "https://api.github.com/users/test-user/repos",
      "events_url": "https://api.github.com/users/test-user/events{/privacy}",
      "received_events_url": "https://api.github.com/users/test-user/received_events",
      "type": "User",
      "site_admin": false
    },
    "title": "Commit C",
    "body": "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->\n\n\n\n\n---\n\n- 👉 #3\n- 　  #2\n- 　  #1\n\n\n**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_3]/v1..gherrit/[GHERRIT_ID_3]/v2)\n\n<details>\n<summary><strong>📚 Full Patch History</strong></summary>\n\n*Links show the diff between the row version and the column version.*\n\n|Version| v1 |Base|\n|:---|:---|:---|\n|v2|[vs v1](/owner/repo/compare/gherrit/[GHERRIT_ID_3]/v1..gherrit/[GHERRIT_ID_3]/v2)|[vs Base](/owner/repo/compare/[GHERRIT_ID_2]..gherrit/[GHERRIT_ID_3]/v2)|\n|v1||[vs Base](/owner/repo/compare/[GHERRIT_ID_2]..gherrit/[GHERRIT_ID_3]/v1)|\n\n</details>\n<details>\n<summary><strong>⬇️ Download this PR</strong></summary>\n\n######\n\n**Branch**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git checkout -b pr-[GHERRIT_ID_3] FETCH_HEAD\n```\n\n**Checkout**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git checkout FETCH_HEAD\n```\n\n**Cherry Pick**\n```bash\ngit fetch origin refs/heads/[GHERRIT_ID_3] && git cherry-pick FETCH_HEAD\n```\n\n**Pull**\n```bash\ngit pull origin refs/heads/[GHERRIT_ID_3]\n```\n\n</details>\n\n*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*\n\n<!-- WARNING: GHerrit relies on the following metadata to work properly. DO NOT EDIT OR REMOVE. --><!-- gherrit-meta: {\"id\":\"[GHERRIT_ID_3]\",\"parent\":\"[GHERRIT_ID_2]\",\"child\":null} -->",
    "head": {
      "ref": "[GHERRIT_ID_3]",
      "sha": ""
    },
    "base": {
      "ref": "[GHERRIT_ID_2]",
      "sha": ""
    },
    "created_at": "2023-01-01T00:00:00Z",
    "updated_at": "2023-01-01T00:00:00Z"
  }
]
